# karbos-ai

./: .gitignore  CITATION.cff  LICENSE  README.md  app.py  config.py  inference.py  metrics.py  model.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
tests/: conftest.py  test_config.py  test_inference.py  test_metrics.py  test_model.py
